[tool.poetry]
name = "term-paper-4"
version = "0.1.0"
description = ""
authors = ["Oleg <kirbenev@bk.ru>"]
readme = "README.md"
packages = [{include = "term_paper_4"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
